# gallia

./: .buildinfo  .gitignore  .mailmap  .readthedocs.yaml  .shellcheckrc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REUSE.toml  api.html  architecture.html  automation.html  config.html  env.html  flake.nix  fr.py  fr_dump.py  fr_send.py  genindex.html  index.html  justfile  logging.html  objects.inv  penlog.7.html  plugins.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.html  transports.html  uv.lock.license
.github/: CODEOWNERS  dependabot.yml  stale.yml
.github/actions/setup/: action.yml
.github/workflows/: assign-reviewers.yml  assign_reviewers.py  codeql-analysis.yml  docker-publish.yml  docs.yml  linters-win32.yml  linters.yml  pytest.yml  python-publish.yml  tests.yml  upload-artifacts.yml
_modules/: index.html  opennetzteil.html  penlog.html
_modules/cursed_hr/: cursed_hr.html
_modules/gallia/: cli.html  log.html  penlab.html  penlog.html  plugins.html  utils.html  virtual_ecu.html
_modules/gallia/command/: base.html  uds.html
_modules/gallia/db/: db_handler.html
_modules/gallia/services/: xcp.html
_modules/gallia/services/uds/: ecu.html
_modules/gallia/services/xcp/: types.html
_modules/gallia/transports/: base.html  can.html  doip.html  dummy.html  hsfz.html  isotp.html  schemes.html  tcp.html  unix.html
_modules/gallia/uds/: ecu.html  helpers.html  nrv.html  server.html
_modules/gallia/uds/core/: client.html  constants.html  exception.html  service.html  utils.html
_modules/gallia/udscan/: core.html
_modules/gallia/udscan/scanner/: discover_doip.html  find_can_ids.html  find_xcp.html  fuzz_payloads.html  scan_identifiers.html  scan_memory_functions.html  scan_reset.html  scan_sa_dump_seeds.html  scan_services.html  scan_sessions.html  simple_dtc.html  simple_ecu_reset.html  simple_get_vin.html  simple_iocbi.html  simple_ping.html  simple_read_by_identifier.html  simple_read_error_log.html  simple_rmba.html  simple_rtcl.html  simple_send_pdu.html  simple_test_xcp.html  simple_wmba.html  simple_write_by_identifier.html
_modules/opennetzteil/: netzteil.html
_sources/: api.md.txt  architecture.md.txt  automation.md.txt  config.md.txt  env.md.txt  logging.md.txt  plugins.md.txt  setup.md.txt  transports.md.txt
_sources/api/: cursed_hr.rst.txt  gallia.rst.txt  gallia.services.rst.txt  gallia.services.xcp.rst.txt  gallia.transports.rst.txt  gallia.uds.rst.txt  gallia.udscan.rst.txt  gallia.udscan.scanner.rst.txt  modules.rst.txt  opennetzteil.rst.txt  penlog.rst.txt
_sources/uds/: database.md.txt
api/: cursed_hr.html  gallia.db.html  gallia.html  gallia.services.html  gallia.services.xcp.html  gallia.transports.html  gallia.uds.core.html  gallia.uds.html  gallia.udscan.html  gallia.udscan.scanner.html  modules.html  opennetzteil.html  penlog.html
contrib/: download-g-api.sh  get-gallia-parser.py  rnd.rules  start-g-api.sh
docs/: .gitignore  Makefile  api.md  architecture.md  automation.md  conf.py  config.md  contributing.md  database.md  env.md  index.md  index.rst  internal.md  introduction.md  logging.md  penlog.7.rst  penrun.1.rst  plugins.md  power_supply.md  setup.md  tooling-architecture.odg  transports.md  virtual_ecu.md
docs/api/: gallia.cursed_hr.rst  gallia.db.rst  gallia.penlab.rst  gallia.rst  gallia.services.rst  gallia.uds.core.rst  gallia.uds.rst  gallia.udscan.rst  gallia.udscan.scanner.rst  modules.rst
docs/man/: .gitignore  Makefile  footer.adoc  penrun.1.adoc
docs/uds/: primitives.md  scan_modes.md  scan_reference_guide.md  test_cmd.rst  virtual_ecu.md
misc/: penrun.config  penrun.fish  release.py
scripts/: gen_constants.py
src/: demo.py
src/cursed_hr/: cursed_hr.py
src/gallia/: cli.py  command.py  config.py  dumpcap.py  exitcodes.py  log.py  net.py  penlab.py  penlog.py  plugins.py  powersupply.py  progress.py  registry.py  utils.py  virtual_ecu.py  xdg.py
src/gallia/analyzer/: __init__.py  analyzer.py  arg_help.py  categorizer.py  config.py  constants.py  db_handler.py  exceptions.py  extractor.py  failure.py  iso_def.py  main.py  mode_config.py  name_config.py  naming_conventions.txt  operator.py  reporter.py  time_analyzer.py  xl_generator.py
src/gallia/cli/: cursed_hr.py  gallia.py  hr.py  netzteil.py
src/gallia/command/: __init__.py  base.py  config.py  uds.py
src/gallia/commands/: __init__.py  dhcp.py
src/gallia/commands/script/: rerun.py  (+2 more)
src/gallia/cursed_hr/: cursed_hr.py
src/gallia/db/: db_handler.py  handler.py  log.py
src/gallia/dissect/: __init__.py
src/gallia/plugins/: plugin.py  uds.py  xcp.py
src/gallia/power_supply/: __init__.py  base.py  exceptions.py  uri.py
src/gallia/pydantic_argparse/: __init__.py
src/gallia/services/: xcp.py
src/gallia/transports/: __init__.py  _can_constants.py  _ctypes_vector_xl.py  _ctypes_vector_xl_wrapper.py  base.py  can.py  doip.py  dummy.py  flexray_vector.py  hsfz.py  isotp.py  schemes.py  tcp.py  types.py  udp.py  unix.py  vector.py  vector_ctypes.py
src/gallia/uds/: __init__.py  ecu.py  helpers.py  nrv.py  server.py
src/gallia/udscan/: core.py  utils.py
src/hr/: __init__.py
src/opennetzteil/: __init__.py  cli.py  netzteil.py
src/opennetzteil/devices/: rnd.py
src/penlog/: __init__.py  haggis_logs.py
src/penrun/: __init__.py  cli.py  utils.py
tests/: test_config.py  test_help.py  test_helpers.py  test_scan_services.py  test_target_uris.py  test_transports.py  test_xdg.py
tests/bats/: 001-invocation.bats  002-scans.bats  002-service-scan.bats  003-primitives.bats  100-hr.bats  README.md  helpers.bash  helpers.sh  run_bats.sh  setup_suite.bash
tests/bats/testfiles/: log-01.json.zst
tests/cli/: 0001-penrun.bats
tests/pytest/: conftest.py  test_can_message.py  test_config.py  test_help.py  test_helpers.py  test_hsfz.py  test_net_if.py  test_scan_services.py  test_target_uris.py  test_transports.py
tests/python/: test_help.py  test_helpers.py  test_logrecord.py  test_transports.py
uds/: database.html  scan_modes.html  virtual_ecu.html
(+112 files in other folders)
